--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.1",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "sequelize": "^6.37.5",
